argo-workflows/overlays/production/argo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - args:
          - server
          - --secure=false
          # - --executor-image
          # - argoproj/argoexec:latest-linux-arm64
          name: argo-server
          image: quay.io/argoproj/argocli:v3.2.3
          readinessProbe:
            httpGet:
              path: /
              port: 2746
              scheme: HTTP
