argo-workflows/overlays/production/workflow-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
spec:
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: workflow-controller
          image: quay.io/argoproj/workflow-controller:v3.3.9
          command:
            - workflow-controller
          args:
            - --configmap
            - workflow-controller-configmap
            - --executor-image
            - quay.io/argoproj/argoexec:v3.3.9
